<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".SettingsActivity">

        <TextView
            android:id="@+id/texttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texttitle"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:autofillHints="@string/name"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="110dp"
            android:text="@string/delete_account" />

        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDelete"
            android:text="@string/log_out_instead"/>
    </RelativeLayout>
</ScrollView>