<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".SettingsActivity">
        <TextView
            android:id="@+id/texttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_your_id_and_password_for_safety_reasons"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texttitle"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:layout_marginTop="50sp"
            android:inputType="textPersonName"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:autofillHints="@string/name"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:text="@string/view"
            android:layout_marginTop="60dp"/>
        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:text="@string/log_out"
            android:layout_marginTop="110dp" />
    </RelativeLayout>
</ScrollView>