<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/ic_icon1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_marginBottom="15dp"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name0"
            android:layout_marginBottom="30dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password0"
            android:layout_marginTop="30dp"
            android:text="@string/login" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnlogin"
            android:text="Stay signed in">

        </com.google.android.material.switchmaterial.SwitchMaterial>
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchLogin"
            android:layout_marginTop="60dp"
            android:text="New User? Register here" />

    </RelativeLayout>
</ScrollView>